// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todo should test TodoLists component with default state of empty array 1`] = `
<div
  className="todo-list"
>
  <p>
    No todos found. Please add some.
  </p>
</div>
`;

exports[`Todo should test TodoLists component with list of todos 1`] = `
<div
  className="todo-list"
>
  <TodoItem
    key="0"
    todo="Read Newspaper"
  />
  <TodoItem
    key="1"
    todo="Publish Article"
  />
</div>
`;

exports[`should test TodoLists component with default state of empty array 1`] = `
<div
  className="todo-list"
>
  <p>
    No todos found. Please add some.
  </p>
</div>
`;

exports[`should test TodoLists component with list of todos 1`] = `
<div
  className="todo-list"
>
  <TodoItem
    key="0"
    todo="Read Newspaper"
  />
  <TodoItem
    key="1"
    todo="Publish Article"
  />
</div>
`;
